# ci_cd

./: .coverage  .gitlab-ci.yml  README.md  coverage.xml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
my-arithmetic-/: LICENSE.txt  README.md  pyproject.toml
my_arithmetic_/: gcd.py
src/my_arithmetic_/: __about__.py  __init__.py
tests/: test_gcd.py
