[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Hadji", email = "iskander.hadji@etudiant.univ-lr.fr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Hadji/my-arithmetic-#readme"
Issues = "https://github.com/Hadji/my-arithmetic-/issues"
Source = "https://github.com/Hadji/my-arithmetic-"

[tool.hatch.version]
path = "src/my_arithmetic_/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_ tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_ = ["src/my_arithmetic_", "*/my-arithmetic-/src/my_arithmetic_"]
tests = ["tests", "*/my-arithmetic-/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.metadata]
vcs = "git"

[tool.hatch.build.targets.wheel]
packages = ["src/my_arithmetic_"]

